// file: proto/gcommon/v1/database/messages/cache_metrics.proto
// version: 1.0.0
// guid: pq6rstuv-78w9-0x1y-2z3a-4b5c6d7e8f9g

edition = "2023";

package gcommon.v1.database;

import "google/protobuf/duration.proto";
import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "gcommon/sdks/go/gcommon/v1/database";

/**
 * Detailed cache performance metrics.
 * Provides comprehensive metrics for cache monitoring and optimization.
 */
message CacheMetrics {
  // Operations per second
  double ops_per_second = 1;

  // Read operations per second
  double reads_per_second = 2;

  // Write operations per second
  double writes_per_second = 3;

  // Average response time
  google.protobuf.Duration avg_response_time = 4;

  // 95th percentile response time
  google.protobuf.Duration p95_response_time = 5;

  // 99th percentile response time
  google.protobuf.Duration p99_response_time = 6;

  // Total number of connections
  int64 total_connections = 7;

  // Active connections
  int64 active_connections = 8;

  // Network bytes received
  int64 network_bytes_in = 9;

  // Network bytes sent
  int64 network_bytes_out = 10;

  // CPU usage percentage
  double cpu_usage_percent = 11;

  // Memory usage percentage
  double memory_usage_percent = 12;

  // Timestamp of metrics collection
  google.protobuf.Timestamp collected_at = 13;
}
